<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="popularOrder">Popularity</string>
    <string name="favoritesOrder">Favorites</string>
    <string name="ratingOrder">Rating</string>
    <string name="orderBy">Order by:</string>
    <string name="loadFilmsFailed">Download movies failed.</string>
    <string name="loadReviewFailed">Download reviews failed.</string>
    <string name="loadTrailerFailed">Download trailers failed.</string>
    <string name="average">Average Vote:</string>
    <string name="releaseDate">Release date:</string>
    <string name="placeHolder">Place holder</string>
    <string name="placeHolderLong">Place holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holderPlace holder</string>
    <string name="mark_favorite">MARK AS\nFAVORITE</string>
    <string name="action_review">Reviews</string>
    <string name="no_review">No review for this film</string>
    <string name="no_trailer">No trailer for this film</string>
    <string name="trailer">Trailer</string>
    <string name="no_favoritefilms">No favorite film are stored.</string>
    <string name="error_favorite">Error in execute Add Favorite function</string>
    <string name="add_favorite_success">Film added to favorite list</string>
    <string name="add_favotite_fail">Film is already present in favorite list</string>
</resources>
