<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderBy"
            android:layout_margin="8dp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroupSetting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton android:id="@+id/radio_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popularOrder"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton android:id="@+id/radio_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratingOrder"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>