<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detailFilmTitle"
                android:gravity="center_horizontal"
                android:text="@string/placeHolder"
                android:textStyle="bold"
                android:background="@android:color/holo_orange_light"
                android:fontFamily="casual"
                android:textSize="25sp"
                android:padding="@dimen/details_padding"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:id="@+id/detailFilmImage"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/detailFilmAverage"
                        android:text="@string/placeHolder"
                        android:paddingLeft="@dimen/details_padding"
                        android:fontFamily="casual"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/detailFilmReleaseDate"
                        android:text="@string/placeHolder"
                        android:paddingLeft="@dimen/details_padding"
                        android:fontFamily="casual"
                        android:textStyle="bold"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mark_favorite"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:textSize="10sp"
                        android:background="@color/colorPrimary"
                        />

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detailFilmOverView"
                android:text="@string/placeHolder"
                android:padding="@dimen/details_padding"
                android:fontFamily="casual"
                android:textStyle="bold"
                />

            <ProgressBar
                android:id="@+id/trailerProgressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                 />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers_recycled_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/no_trailer_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:text="@string/no_trailer"
                android:visibility="gone"/>

    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>